<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/homeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_white">

        <ImageView
            android:id="@+id/homeLogo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logotype"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/home_title"
            android:text="@string/home_title"
            android:layout_below="@id/homeLogo"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/main_blue"
            android:fontFamily="@font/fig_700"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="500dp"
            android:orientation="vertical"
            android:layout_below="@id/home_title"
            android:layout_marginTop="5dp"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/button_wrapper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <Button
                    android:id="@+id/balitaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/balita"
                    android:textSize="20sp"
                    android:layout_marginHorizontal="5dp"
                    android:textColor="@color/main_white"
                    android:fontFamily="@font/fig_600"
                    android:paddingHorizontal="25dp"
                    android:backgroundTint="@color/main_blue" />

                <Button
                    android:id="@+id/badutaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baduta"
                    android:textSize="20sp"
                    android:backgroundTint="@color/main_grey"
                    android:layout_marginHorizontal="5dp"
                    android:textColor="@color/sec_white"
                    android:fontFamily="@font/fig_600"
                    android:paddingHorizontal="20dp" />
            </LinearLayout>


            <FrameLayout
                android:id="@+id/list_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/button_wrapper">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/item_layout"/>

            </FrameLayout>
        </LinearLayout>
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:id="@+id/add_button"
        app:iconSize="36dp"
        android:src="@drawable/ic_add"
        app:tint="@color/main_white"
        android:backgroundTint="@color/main_blue"
        app:maxImageSize="36dp"
        android:layout_margin="30dp"
        app:elevation="5dp" />




</FrameLayout>