<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.InfoAplikasiActivity"
    android:background="@drawable/appbg4">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/main_white"
            app:icon="@drawable/ic_back"
            app:iconSize="36dp"
            app:rippleColor="@color/ripple_blue"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cara\nPenggunaan\nAplikasi"
            android:fontFamily="@font/fig_700"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@color/main_blue"
            android:layout_centerInParent="true"
            android:background="@drawable/title_bg"
            android:paddingHorizontal="25dp"
            android:paddingTop="3dp"
            android:paddingBottom="10dp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header"
        android:paddingTop="10dp"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/title_bg"
            android:layout_marginHorizontal="15dp"
            android:paddingVertical="10dp"
            android:paddingHorizontal="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textSize="22sp"
                    android:textColor="@color/main_blk"
                    android:text="1.  " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textSize="22sp"
                    android:textColor="@color/main_blk"
                    android:text="@string/step1app"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/main_blk"
                    android:textSize="22sp"
                    android:text="2. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/main_blk"
                    android:fontFamily="@font/fig_500"
                    android:textSize="22sp"
                    android:text="@string/step2app"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/main_blk"
                    android:textSize="22sp"
                    android:text="3. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/main_blk"
                    android:textSize="22sp"
                    android:text="@string/step3app"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/main_blk"
                    android:textSize="22sp"
                    android:text="4. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/main_blk"
                    android:textSize="22sp"
                    android:text="@string/step4app"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/main_blk"
                    android:textSize="22sp"
                    android:text="5. " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/fig_500"
                    android:textColor="@color/main_blk"
                    android:textSize="22sp"
                    android:text="@string/step5app"
                    android:justificationMode="inter_word"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>